[project]
name = "comfyui_fill-example-nodes"
description = "An example node pack for ComfyUI to demonstrate custom node creation."
version = "1.0.1"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI_Fill-Example-Nodes"

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "ComfyUI_Fill-Example-Nodes"
Icon = "https://avatars.githubusercontent.com/u/55672949"